--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,31 +18,19 @@
         android:src="@drawable/katherine" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/udacity"
-        android:textSize="22sp" />
+        style="@style/TextStyle"
+        android:text="@string/udacity" />
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/_650_555_5555"
-        android:textSize="22sp" />
+        style="@style/TextStyle"
+        android:text="@string/_650_555_5555" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/www_udacity_com"
-        android:textSize="22sp" />
+        style="@style/TextStyle"
+        android:text="@string/www_udacity_com" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/_2465_latham_st_mountain_view_ca_94043"
-        android:textSize="22sp" />
+        style="@style/TextStyle"
+        android:text="@string/_2465_latham_st_mountain_view_ca_94043" />
 </LinearLayout>
