--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EEEEEE"
-    android:orientation="vertical"
+    android:fillViewport="true">
 
-    tools:context="com.example.fatihyilmaz.helloandroid.MainActivity">
-
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="64dp"
-        android:contentDescription="@string/todo"
-        android:scaleType="centerCrop"
-        android:src="@drawable/katherine" />
+        android:layout_height="wrap_content"
+        android:background="#E1F5FE"
+        android:orientation="vertical"
+        android:paddingEnd="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingStart="16dp"
+        tools:context="com.example.fatihyilmaz.helloandroid.MainActivity">
 
-    <TextView
-        style="@style/TextStyle"
-        android:text="@string/udacity" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="64dp"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/computer_science" />
 
+        <TextView
+            style="@style/TextStyle"
+            android:layout_marginTop="16dp"
+            android:text="@string/hof_partnership" />
 
-    <TextView
-        style="@style/TextStyle"
-        android:text="@string/_650_555_5555" />
+        <View style="@style/ViewStyle" />
 
-    <TextView
-        style="@style/TextStyle"
-        android:text="@string/www_udacity_com" />
+        <TextView
+            style="@style/TextStyle"
+            android:text="@string/phone_number" />
 
-    <TextView
-        style="@style/TextStyle"
-        android:text="@string/_2465_latham_st_mountain_view_ca_94043" />
-</LinearLayout>
+        <View style="@style/ViewStyle" />
+
+        <TextView
+            style="@style/TextStyle"
+            android:text="@string/personal_website_address" />
+
+        <View style="@style/ViewStyle" />
+
+        <TextView
+            style="@style/TextStyle"
+            android:text="@string/address" />
+    </LinearLayout>
+</ScrollView>
